--- a/gui/static/gui/scss/vm.scss
+++ b/gui/static/gui/scss/vm.scss
@@ -98,6 +98,7 @@ td.vm_admin {
 
 .vm_hostname {
   font-size: 11px;
+  word-wrap: break-word;
 }
 
 .visible-bigscreen {
